--- a/augen.ipynb
+++ b/augen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "6689dba5-d4a5-4541-a4de-6eb34aad42dd",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "cca605ab-4c3c-4bd5-9099-cc2930147f16",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,31 @@
     "\n",
     "# Transformation functions (from the previous example)\n",
     "def add_dust(image, intensity=30, count=100):\n",
+    "    \"\"\"\n",
+    "    Добавляет эффект пыли к изображению.\n",
+    "\n",
+    "    Параметры:\n",
+    "    ----------\n",
+    "    image : numpy.ndarray\n",
+    "        Входное изображение, к которому будет добавлен эффект пыли. \n",
+    "        Ожидается, что изображение имеет формат (высота, ширина, 3), \n",
+    "        где 3 - это количество цветовых каналов (RGB).\n",
+    "    \n",
+    "    intensity : int, optional\n",
+    "        Интенсивность эффекта пыли, заданная в процентах (от 0 до 100). \n",
+    "        По умолчанию 30. Более высокие значения создают более заметный эффект.\n",
+    "\n",
+    "    count : int, optional\n",
+    "        Количество частиц пыли, которые будут добавлены к изображению. \n",
+    "        По умолчанию 100. Увеличение этого значения создаст более плотный эффект пыли.\n",
+    "\n",
+    "    Возвращает:\n",
+    "    ----------\n",
+    "    tuple\n",
+    "        Кортеж, содержащий:\n",
+    "        - numpy.ndarray: Изображение с добавленным эффектом пыли.\n",
+    "        - numpy.ndarray: Маска, показывающая области, где была добавлена пыль (значения 255 для пыли, 0 для остальных областей).\n",
+    "    \"\"\"\n",
     "    overlay = image.copy()\n",
     "    height, width, _ = image.shape\n",
     "    mask = np.zeros((height, width), dtype=np.uint8)\n",
@@ -36,6 +61,31 @@
     "\n",
     "\n",
     "def add_smudges(image, intensity=40, count=10):\n",
+    "    \"\"\"\n",
+    "    Добавляет эффект размазывания к изображению.\n",
+    "\n",
+    "    Параметры:\n",
+    "    ----------\n",
+    "    image : numpy.ndarray\n",
+    "        Входное изображение, к которому будет добавлен эффект размазывания. \n",
+    "        Ожидается, что изображение имеет формат (высота, ширина, 3), \n",
+    "        где 3 - это количество цветовых каналов (RGB).\n",
+    "    \n",
+    "    intensity : int, optional\n",
+    "        Интенсивность эффекта размазывания, заданная в процентах (от 0 до 100). \n",
+    "        По умолчанию 40. Более высокие значения создают более заметный эффект.\n",
+    "\n",
+    "    count : int, optional\n",
+    "        Количество размазанных участков, которые будут добавлены к изображению. \n",
+    "        По умолчанию 10. Увеличение этого значения создаст более плотный эффект размазывания.\n",
+    "\n",
+    "    Возвращает:\n",
+    "    ----------\n",
+    "    tuple\n",
+    "        Кортеж, содержащий:\n",
+    "        - numpy.ndarray: Изображение с добавленным эффектом размазывания.\n",
+    "        - numpy.ndarray: Маска, показывающая области, где было добавлено размазывание (значения 255 для размазывания, 0 для остальных областей).\n",
+    "    \"\"\"\n",
     "    overlay = image.copy()\n",
     "    height, width, _ = image.shape\n",
     "    mask = np.zeros((height, width), dtype=np.uint8)\n",
@@ -52,6 +102,31 @@
     "\n",
     "\n",
     "def add_rain(image, intensity=50, count=100):\n",
+    "    \"\"\"\n",
+    "    Добавляет эффект дождя к изображению.\n",
+    "\n",
+    "    Параметры:\n",
+    "    ----------\n",
+    "    image : numpy.ndarray\n",
+    "        Входное изображение, к которому будет добавлен эффект дождя. \n",
+    "        Ожидается, что изображение имеет формат (высота, ширина, 3), \n",
+    "        где 3 - это количество цветовых каналов (RGB).\n",
+    "    \n",
+    "    intensity : int, optional\n",
+    "        Интенсивность эффекта дождя, заданная в процентах (от 0 до 100). \n",
+    "        По умолчанию 50. Более высокие значения создают более заметный эффект.\n",
+    "\n",
+    "    count : int, optional\n",
+    "        Количество капель дождя, которые будут добавлены к изображению. \n",
+    "        По умолчанию 100. Увеличение этого значения создаст более плотный эффект дождя.\n",
+    "\n",
+    "    Возвращает:\n",
+    "    ----------\n",
+    "    tuple\n",
+    "        Кортеж, содержащий:\n",
+    "        - numpy.ndarray: Изображение с добавленным эффектом дождя.\n",
+    "        - numpy.ndarray: Маска, показывающая области, где был добавлен дождь (значения 255 для дождевых капель, 0 для остальных областей).\n",
+    "    \"\"\"\n",
     "    overlay = image.copy()\n",
     "    height, width, _ = image.shape\n",
     "    mask = np.zeros((height, width), dtype=np.uint8)\n",
@@ -69,6 +144,31 @@
     "\n",
     "\n",
     "def add_droplets(image, intensity=50, count=50):\n",
+    "    \"\"\"\n",
+    "    Добавляет эффект капель воды к изображению.\n",
+    "\n",
+    "    Параметры:\n",
+    "    ----------\n",
+    "    image : numpy.ndarray\n",
+    "        Входное изображение, к которому будет добавлен эффект капель воды. \n",
+    "        Ожидается, что изображение имеет формат (высота, ширина, 3), \n",
+    "        где 3 - это количество цветовых каналов (RGB).\n",
+    "    \n",
+    "    intensity : int, optional\n",
+    "        Интенсивность эффекта капель воды, заданная в процентах (от 0 до 100). \n",
+    "        По умолчанию 50. Более высокие значения создают более заметный эффект.\n",
+    "\n",
+    "    count : int, optional\n",
+    "        Количество капель, которые будут добавлены к изображению. \n",
+    "        По умолчанию 50. Увеличение этого значения создаст более плотный эффект капель.\n",
+    "\n",
+    "    Возвращает:\n",
+    "    ----------\n",
+    "    tuple\n",
+    "        Кортеж, содержащий:\n",
+    "        - numpy.ndarray: Изображение с добавленным эффектом капель воды.\n",
+    "        - numpy.ndarray: Маска, показывающая области, где были добавлены капли (значения 255 для капель, 0 для остальных областей).\n",
+    "    \"\"\"\n",
     "    overlay = image.copy()\n",
     "    height, width, _ = image.shape\n",
     "    mask = np.zeros((height, width), dtype=np.uint8)\n",
@@ -85,12 +185,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "12ca26de-0e23-4ce0-a8b8-bde611df54f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_overexposure(image, intensity=80, count=2):\n",
+    "    \"\"\"\n",
+    "    Добавляет эффект переэкспонирования к изображению.\n",
+    "\n",
+    "    Параметры:\n",
+    "    ----------\n",
+    "    image : numpy.ndarray\n",
+    "        Входное изображение, к которому будет добавлен эффект переэкспонирования. \n",
+    "        Ожидается, что изображение имеет формат (высота, ширина, 3), \n",
+    "        где 3 - это количество цветовых каналов (RGB).\n",
+    "    \n",
+    "    intensity : int, optional\n",
+    "        Интенсивность эффекта переэкспонирования, заданная в процентах (от 0 до 100). \n",
+    "        По умолчанию 80. Более высокие значения создают более заметный эффект.\n",
+    "\n",
+    "    count : int, optional\n",
+    "        Количество областей переэкспонирования, которые будут добавлены к изображению. \n",
+    "        По умолчанию 2. Увеличение этого значения создаст более плотный эффект переэкспонирования.\n",
+    "\n",
+    "    Возвращает:\n",
+    "    ----------\n",
+    "    tuple\n",
+    "        Кортеж, содержащий:\n",
+    "        - numpy.ndarray: Изображение с добавленным эффектом переэкспонирования.\n",
+    "        - numpy.ndarray: Маска, показывающая области, где было добавлено переэкспонирование (значения 255 для переэкспонированных областей, 0 для остальных).\n",
+    "    \"\"\"\n",
     "    overlay = image.copy()\n",
     "    height, width, _ = image.shape\n",
     "    mask = np.zeros((height, width), dtype=np.uint8)\n",
@@ -119,6 +244,31 @@
     "\n",
     "    return cv2.addWeighted(overlay, intensity / 100, image, 1 - intensity / 100, 0), mask\n",
     "def add_shadows(image, intensity=50, count=3):\n",
+    "    \"\"\"\n",
+    "    Добавляет эффект теней к изображению.\n",
+    "\n",
+    "    Параметры:\n",
+    "    ----------\n",
+    "    image : numpy.ndarray\n",
+    "        Входное изображение, к которому будет добавлен эффект теней. \n",
+    "        Ожидается, что изображение имеет формат (высота, ширина, 3), \n",
+    "        где 3 - это количество цветовых каналов (RGB).\n",
+    "    \n",
+    "    intensity : int, optional\n",
+    "        Интенсивность эффекта теней, заданная в процентах (от 0 до 100). \n",
+    "        По умолчанию 50. Более высокие значения создают более заметный эффект.\n",
+    "\n",
+    "    count : int, optional\n",
+    "        Количество теневых областей, которые будут добавлены к изображению. \n",
+    "        По умолчанию 3. Увеличение этого значения создаст более плотный эффект теней.\n",
+    "\n",
+    "    Возвращает:\n",
+    "    ----------\n",
+    "    tuple\n",
+    "        Кортеж, содержащий:\n",
+    "        - numpy.ndarray: Изображение с добавленным эффектом теней.\n",
+    "        - numpy.ndarray: Маска, показывающая области, где были добавлены тени (значения 255 для теневых областей, 0 для остальных).\n",
+    "    \"\"\"\n",
     "    overlay = image.copy()\n",
     "    height, width, _ = image.shape\n",
     "    mask = np.zeros((height, width), dtype=np.uint8)\n",
@@ -150,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3896b453-f48e-4242-ba08-f0e8507e5be6",
    "metadata": {},
    "outputs": [],
@@ -190,13 +340,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "5061fecd-fad9-4ef6-98a2-2c6a38c10c48",
    "metadata": {},
    "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "def process_directory_with_existing_masks(input_dir, mask_dir, output_dir, n=2):\n",
+    "    \"\"\"\n",
+    "    Обрабатывает изображения в указанной директории, применяя аугментации и комбинируя их с существующими масками.\n",
+    "\n",
+    "    Параметры:\n",
+    "    ----------\n",
+    "    input_dir : str\n",
+    "        Путь к директории, содержащей входные изображения для обработки.\n",
+    "    \n",
+    "    mask_dir : str\n",
+    "        Путь к директории, содержащей существующие маски для входных изображений.\n",
+    "    \n",
+    "    output_dir : str\n",
+    "        Путь к директории, в которую будут сохранены обработанные изображения и маски.\n",
+    "    \n",
+    "    n : int, optional\n",
+    "        Количество аугментаций, которые будут применены к каждому изображению. \n",
+    "        По умолчанию 2.\n",
+    "\n",
+    "    Описание:\n",
+    "    ----------\n",
+    "    Функция проходит по всем изображениям в директории `input_dir`, загружает соответствующие маски из `mask_dir`, \n",
+    "    применяет случайные аугментации к изображениям и комбинирует новые маски с существующими. \n",
+    "    Результаты сохраняются в `output_dir` с уникальными именами файлов.\n",
+    "\n",
+    "    Процесс:\n",
+    "    --------\n",
+    "    1. Создает выходную директорию, если она не существует.\n",
+    "    2. Загружает каждое изображение и соответствующую маску.\n",
+    "    3. Применяет случайные аугментации к изображению заданное количество раз.\n",
+    "    4. Объединяет новые маски с существующими, используя уникальные значения для каждой аугментации.\n",
+    "    5. Сохраняет обработанное изображение и комбинированную маску в выходной директории.\n",
+    "\n",
+    "    Примечание:\n",
+    "    -----------\n",
+    "    - Функция использует библиотеку OpenCV для обработки изображений и tqdm для отображения прогресса.\n",
+    "    - Уникальные имена файлов создаются на основе хеш-значения комбинированной маски.\n",
+    "    \"\"\"\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
     "    augmentations = list(AUGMENTATIONS.keys())\n",
     "\n",
@@ -303,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
